[package]
name = "github_expander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
log = "0.4.20"
env_logger = "0.10.1"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
octocrab = "0.32.0"
once_cell = "1.18.0"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }